# ctx3-hwid-parser

./: CMakeLists.txt  LICENSE  README.md
Include/: chp3.hpp
src/: main.cpp
